[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pygeoif"
version = "1.1.1"
authors = [{name = "Christian Ledermann", email = "christian.ledermann@gmail.com"}]
license = {text = "LGPL"}
description = "A basic implementation of the __geo_interface__"
keywords = ["GIS", "Spatial", "WKT"]
classifiers = [
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
]
urls = {Homepage = "https://github.com/cleder/pygeoif/"}
requires-python = ">=3.7"
dependencies = ["typing_extensions"]

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.optional-dependencies]
testing = ["pytest"]

[tool.setuptools]
zip-safe = true
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["ez_setup", "docs"] # examples; tests
namespaces = false

[tool.check-manifest]
ignore = [".*", "mutmut_config.py", "test-requirements.txt", "tox.ini"]

[tool.flake8]
max_line_length = 88

[tool.isort]
line_length = 88
force_single_line = true

[tool.mypy]
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
ignore_errors = false
ignore_missing_imports = false
implicit_reexport = false
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true
warn_return_any = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_errors = true

[tool.pyright]
include = ["pygeoif"]
exclude = ["**/node_modules",
    "**/__pycache__",
    ".pytype",
    ".pyre",
    "pygeoif/tests"
]
reportMissingImports = true
reportMissingTypeStubs = true

[tool.ruff]

[tool.ruff.per-file-ignores]
"tests/*.py" = ["D103"]
"setup.py" = ["E501"]
