[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.2",
]

[project]
authors = [
    { email = "christian.ledermann@gmail.com", name = "Christian Ledermann" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "typing_extensions",
]
description = "A basic implementation of the __geo_interface__"
dynamic = [
    "version",
]
keywords = [
    "GIS",
    "Spatial",
    "WKT",
]
name = "pygeoif"
requires-python = ">=3.7"

[project.license]
text = "LGPL"

[project.optional-dependencies]
testing = [
    "pytest",
]

[project.readme]
content-type = "text/x-rst"
file = "README.rst"

[project.urls]
Homepage = "https://github.com/cleder/pygeoif/"

[tool.check-manifest]
ignore = [
    ".*",
    "mutmut_config.py",
    "test-requirements.txt",
    "tox.ini",
]

[tool.flake8]
max_line_length = 88

[tool.isort]
force_single_line = true
line_length = 88

[tool.mypy]
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_errors = false
ignore_missing_imports = false
implicit_reexport = false
no_implicit_optional = true
overrides = [
    { disallow_untyped_defs = false, ignore_errors = true, module = "tests.*" },
]
show_error_codes = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pyright]
exclude = [
    "**/__pycache__",
    "**/node_modules",
    ".pyre",
    ".pytype",
    "pygeoif/tests",
]
include = [
    "pygeoif",
]
reportMissingImports = true
reportMissingTypeStubs = true

[tool.ruff.per-file-ignores]
"setup.py" = [
    "E501",
]
"tests/*.py" = [
    "D103",
]

[tool.setuptools]
include-package-data = true
packages = [
    "pygeoif",
]

[tool.setuptools.dynamic.version]
attr = "pygeoif.about.__version__"
